# video-stream-processing-E5

gstreamer_data/: CMakeLists.txt  The.Flying.Deuces.French.srt  The.Flying.Deuces.Spanish.srt  compositor.sh  exple_script.sh  projet.sh  streaming.sh
